--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,9 @@
     <meta name="keywords" content="Travel planning, travel bundles, travel escapes">
     <meta name="description" content="Your clarity. One trip away. We create soul restoring journeys that inspire you to be you.">
     <!--  <link rel="stylesheet" type="text/css" href="assets/styles/styles.css">-->
-    <link rel="stylesheet" type="text/css" href="temp/styles/styles.css"> </head>
+    <link rel="stylesheet" type="text/css" href="temp/styles/styles.css">
+    <script src="/temp/scripts/Vendor.js"></script>
+</head>
 
 <body>
     <header class='site-header'>
@@ -50,12 +52,12 @@
         <div class="wrapper">
             <h2 class="headline headline--centered headline--light headline--b-margin--small">The first trip we planned <strong>was our own.</strong></h2>
             <h3 class="headline headline--centered headline--orange headline--small headline--narrow headline--light headline--b-margin--large">Ever since, we&rsquo;ve been working to make travel <strong>better for everyone.</strong></h3>
-            <div class="wrapper wrapper--medium wrapper--b-margin"> <img sizes="(min-width: 970px) 976px, 100vw" srcset="assets/images/first-trip-low-res.jpg 565w, assets/images/first-trip.jpg 976w, assets/images/first-trip-hi-res.jpg 1952w" alt="Couple walking down a street."> </div>
+            <div class="wrapper wrapper--medium wrapper--b-margin"> <img class="lazyload" sizes="(min-width: 970px) 976px, 100vw" data-srcset="assets/images/first-trip-low-res.jpg 565w, assets/images/first-trip.jpg 976w, assets/images/first-trip-hi-res.jpg 1952w" alt="Couple walking down a street."> </div>
             <div class="row row--gutters">
                 <div class="row__medium-4 row__medium-4--larger row__b-margin-until-medium">
                     <picture>
-                        <source sizes="404px" srcset="assets/images/our-start.jpg 404w, assets/images/our-start-hi-dpi.jpg 808w" media="(min-width: 1020px)">
-                        <source sizes="320px" srcset="assets/images/our-start-portrait.jpg 382w, assets/images/our-start-portrait-hi-dpi.jpg 764w" media="(min-width: 800px)"> <img srcset="assets/images/our-start-landscape.jpg 800w, assets/images/our-start-landscape-hi-dpi.jpg 1600w" alt="Our founder, Jane Doe"> </picture>
+                        <source sizes="404px" data-srcset="assets/images/our-start.jpg 404w, assets/images/our-start-hi-dpi.jpg 808w" media="(min-width: 1020px)">
+                        <source sizes="320px" data-srcset="assets/images/our-start-portrait.jpg 382w, assets/images/our-start-portrait-hi-dpi.jpg 764w" media="(min-width: 800px)"> <img class="lazyload" data-srcset="assets/images/our-start-landscape.jpg 800w, assets/images/our-start-landscape-hi-dpi.jpg 1600w" alt="Our founder, Jane Doe"> </picture>
                 </div>
                 <div class="row__medium-8 row__medium-8--smaller">
                     <div class="generic-content-container">
@@ -95,13 +97,13 @@
             </div>
         </div>
     </div>
-    <div id="testimonials" class="page-section page-section--no-b-padding-until-large page-section--testimonials" data-matching-link="#testimonials-link">
+    <div id="testimonials" class="page-section page-section--no-b-padding-until-large page-section--testimonials lazyload" data-matching-link="#testimonials-link">
         <div class="wrapper wrapper--no-padding-until-large">
             <h2 class='section-title section-title--blue'><span class="icon icon--comment section-title__icon"></span> Real <strong>Testimonials</strong></h2>
             <div class="row row--gutters row--equal-height-at-large row--gutters-small row--t-padding generic-content-container ">
                 <div class="row__large-4">
                     <div class="testimonial">
-                        <div class="testimonial__photo"> <img sizes="160px" srcset="assets/images/testimonial-jane.jpg 160w, assets/images/testimonial-jane-hi-dpi.jpg 320w" alt="Jane Doe"> </div>
+                        <div class="testimonial__photo"> <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-jane.jpg 160w, assets/images/testimonial-jane-hi-dpi.jpg 320w" alt="Jane Doe"> </div>
                         <h3 class="testimonial__title">Jane Doe</h3>
                         <h4 class="testimonial__subtitle">9 Time Escaper</h4>
                         <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.&rdquo;</p>
@@ -109,7 +111,7 @@
                 </div>
                 <div class="row__large-4">
                     <div class="testimonial">
-                        <div class="testimonial__photo"> <img sizes="160px" srcset="assets/images/testimonial-john.jpg 160w, assets/images/testimonial-john-hi-dpi.jpg 320w" alt="John Smith"> </div>
+                        <div class="testimonial__photo"> <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-john.jpg 160w, assets/images/testimonial-john-hi-dpi.jpg 320w" alt="John Smith"> </div>
                         <h3 class="testimonial__title">John Smith</h3>
                         <h4 class="testimonial__subtitle">4 Time Escaper</h4>
                         <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur.&rdquo;</p>
@@ -117,7 +119,7 @@
                 </div>
                 <div class="row__large-4">
                     <div class="testimonial testimonial--last">
-                        <div class="testimonial__photo"> <img sizer="160px" srcset="assets/images/testimonial-cat.jpg 160w, assets/images/testimonial-cat-hi-dpi.jpg 320w" alt="Cat Mckitty"> </div>
+                        <div class="testimonial__photo"> <img class="lazyload" sizer="160px" data-srcset="assets/images/testimonial-cat.jpg 160w, assets/images/testimonial-cat-hi-dpi.jpg 320w" alt="Cat Mckitty"> </div>
                         <h3 class="testimonial__title">Cat McKitty</h3>
                         <h4 class="testimonial__subtitle">6 Time Escaper</h4>
                         <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.&rdquo;</p>
@@ -142,6 +144,7 @@
         <div class="modal__close">X</div>
     </div>
     <script src="/temp/scripts/app.js"></script>
+    
 </body>
 
 </html>
